window: Call size_allocate() to allocate a size

Don't call gtk_container_resize_children().

https://bugzilla.gnome.org/show_bug.cgi?id=700185